[package]
name = "stopwatch"
version = "0.1.0"
authors = ["Abhishek shivale <abhishekshivale45@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
tokio = { version = "1", features = ["time"] }


[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
